fixed footer link layout issues on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -112,12 +112,17 @@
         display: table;
         table-layout: fixed;
         width: 100%;
+        margin-left: 0;
 
         li {
             display: table-cell;
             text-align: center;
             margin: 0;
             padding: 0;
+
+            @media screen and (max-width: 700px) {
+                display: block;
+            }
         }
     }
 
